<resources>
    <string name="app_name">Bulletindesolde</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>

    <string name="slide_1_title">Request your payslip</string>
    <string name="slide_1_desc">Anytime,anywhere request your payslip and Bulletindesolde delivers it</string>

    <string name="slide_2_title">Pay with Mobile Money</string>
    <string name="slide_2_desc">Pay for your payslip delivery with MTN MoMO</string>

    <string name="slide_3_title">Secured Delivery</string>
    <string name="slide_3_desc">Your payslip is delivered into your email and BDS account</string>

    <string name="slide_4_title">Delivery Notification</string>
    <string name="slide_4_desc">Bullentindesolde notifies you by SMS when your payslip is delivered</string>

    <string name="name">Name</string>
    <string name="password_verification">Password verification</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Log in</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="already_a_member_login">Already a member? Log in</string>
    <string name="create_account">Create Account</string>
    <string name="agreement">I agree to </string>
    <string name="terms">terms and condition</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="requestTitle">Request</string>
    <string name="settingTitle">Profile</string>
    <string name="historyTitle">History</string>
    <string name="input_matricle">Matricule</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="enter_matricle_month_and_year">Enter matricule,select month and year</string>

    //Months of the year
    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="March">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="Jun">Jun</string>
    <string name="July">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="checkout">Checkout</string>
    <string name="login_error">The email and password you entered did not match our records. Please double-check and try again.</string>
    <string name="insert_another_email">Try another email address</string>
    <string name="back">Back</string>
    <string name="action_logout">Logout</string>
    <string name="registration_error"><![CDATA[Email address already take be another user.Please try a different email address]]></string>
    <string name="proceed_payment">Proceed payment</string>
    <string name="logging_in">Logging in</string>
    <string name="creating_account">Creating account ...</string>
    <string name="server_error">Oops! Something went wrong. Try again later</string>
    <string name="check_agreement_error">You have to accept to terms and conditions before registartion</string>
    <string name="logging_out">Logging out...</string>
    <string name="try_again">Try again</string>
    <string name="no_connection">No connection</string>
    <string name="an_internet_error_occured_please_try_again">An internet error occurred, please try again</string>

    <string name="select_month">Select a request month</string>
    <string name="select_year">Select a request year</string>

    <string-array name="months">
        <item>@string/select_month</item>
        <item>@string/Jan</item>
        <item>@string/Feb</item>
        <item>@string/March</item>
        <item>@string/Apr</item>
        <item>@string/May</item>
        <item>@string/Jun</item>
        <item>@string/July</item>
        <item>@string/Aug</item>
        <item>@string/Sep</item>
        <item>@string/Oct</item>
        <item>@string/Nov</item>
        <item>@string/Dec</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="InboxTitle">Inbox</string>
    <string name="momo_insert">Your MoMo Number</string>
    <string name="delete">Delete</string>
    <string name="confirm_126_payment_in_less_than_15_seconds_when_you_recieve_momo_sms">Confirm (*126#) payment in less than 15 seconds when you receive MoMo SMS.</string>
    <string name="delivery_at">DELIVERY AT :</string>
    <string name="invoice">Invoice</string>
    <string name="requests">Requests</string>
    <string name="charges">Charges</string>
    <string name="total_amount">Total Amount :</string>
    <string name="your_momo_number">Your MoMo Number</string>
    <string name="pending">Pending</string>
    <string name="email_error">Enter a valid email address</string>
    <string name="password_error">The password must be at least 6 characters</string>
    <string name="name_error">Name must have at least 3 characters</string>
    <string name="password_mismatch">Password doesn\'t match</string>
    <string name="Contact_us">Contact us</string>
    <string name="about_us">About</string>
    <string name="loading">Loading...</string>
    <string name="deleting_request">Deleting request...</string>
    <string name="delete_msg">Do you really want to delete this request?</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="communicate">Communicate</string>
    <string name="mtn_momo_transfer">MTN MoMo Transfer</string>
    <string name="_237">(+237)</string>
    <string name="Matricule_invalid">The Matricule number provided is invalid.</string>
    <string name="downloading">Downloading...</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <string name="send_feedback">Send feedback</string>
    <string name="select_category">Select category</string>
    <string name="tell_us_what_you_think_about_the_bullentindesolde_app_for_improvment">Any problem, enquiry, issues?</string>
    <string name="have_your_say">Have your Say!</string>

    <string name="app_crashed">App malfunction</string>
    <string name="payslipe_download_failed">Payslip download failed</string>
    <string name="payslip_request_failed">Payslip request failed</string>
    <string name="your_suggestion">Your suggestions</string>

    <string name="Question_enquiry">Question/Enquiry</string>
    <string name="sending_comment">Sending comment...</string>
    <string name="mesasge_send">Feedback successfully send. Thank you!</string>
    <string name="invalid_momo">Invalid MoMo number.</string>
    <string name="noresorce">The MoMo account provided may not be valid or is deactivated</string>
    <string name="expired">Waiting time expiresd</string>
    <string name="noholder">The telephone number provided is/may not be connected to any MoMo account</string>
    <string name="nomoney">Your moMo account doesn\'t have enough money to make this payment</string>
    <string name="defaultErro">Something went wrong.Try again later.</string>
    <string name="please_enter_your_comment">Write your comment </string>


    <string-array name="categoroy">
        <item>@string/app_crashed</item>
        <item>@string/payslipe_download_failed</item>
        <item>@string/payslip_request_failed</item>
        <item>@string/your_suggestion</item>
        <item>@string/Question_enquiry</item>
    </string-array>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="none">None</string>

    <string-array name="sex">
        <item>@string/none</item>
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>


    <string name="permission_needed">Need Permissions</string>
    <string name="permssion_msg">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="GOTO_SETTING">GOTO SETTINGS</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="phone">Phone</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="editprofile">User profile settings</string>
    <string name="Name">User\'s name</string>
    <string name="phone_number">Phone number</string>
    <string name="whatsapp_number">WhatsApp number</string>
    <string name="region">Region</string>
    <string name="address">Address</string>
    <string name="update_profile">Update profile</string>
    <string name="old_paasword">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="select_gender">Select gender</string>
    <string name="phone_error">Phone number is invalid</string>
    <string name="please_wait">Please wait............</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>